# cadaref

./: Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yml
doc/: algorithm.md
src/: lib.rs  main.rs
testdata/: 500_pixels_per_cm.tif  HG3099.tif  different_x_and_y_resolution.tif  points.csv  symbols.csv
