[package]
name = "cadaref"
version = "0.1.0"
edition = "2021"

[lib]
name = "cadaref"
path = "src/lib.rs"

[[bin]]
name = "cadaref-match"
path = "src/main.rs"

[dependencies]
bisection = "0.1.0"
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
gdal = "0.17.0"
gdal-sys = "0.10.0"
rstar = "0.12.0"
serde = { version = "1.0.204", features = ["derive"] }
